# midi-nn

./: .gitattributes  .gitignore  Cargo.toml  README.md  Untitled.ipynb  model.py  notebook.py  requirements.txt  sparse.py  test_model.py  test_sparse.py  test_train.py  train.py  transformer-v1.ipynb  transformer-v3.ipynb  transformer-v4.ipynb  transformer-v5.ipynb
junk-drawer/: notebook.py  transformer-v1.ipynb  transformer-v2.ipynb  transformer-v5.ipynb
samples/transformer-v1/: 100_000_iters.mid  200_000_iters.mid  300_000_iters.mid
src/: error.rs  main.rs  midi.rs  notes.rs  sequence.rs  token.rs
