[package]
name = "midi-tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.1"
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
const_panic = "0.2.8"
midly = "0.5.3"
nom = "7.1.3"
num = "0.4.1"
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
